--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -4,7 +4,8 @@ header{
     position: fixed;
     z-index: 1;
     background-color: #111;
-    >.wrapper{
+    font-family: 'SUITE-Regular';
+    >.nav-wrap{
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -12,21 +13,22 @@ header{
         width: 100%;
         max-width: 1600px;
         margin: 0 auto;
-        .logoBox{
+        .logo-box{
             display: flex;
             align-items: center;
             padding: 20px 20px;
             img{
-                width: 80%;
+                width: 48px;
             }
         }
-        .mainNavbar{
+        .nav-left-list{
             display: flex;
             gap: 50px;
             margin-right: 680px;
             li{
                 a{
                     color: #777;
+                    font-size: 16px;
                     font-weight: 600;
                     &:hover{
                         color: #fff;
@@ -34,12 +36,13 @@ header{
                 }
             }
         }
-        .subNavbar{
+        .nav-right-list{
             display: flex;
             gap: 26px;
             li{
                 a{
                     color: #777;
+                    font-size: 15px;
                     font-weight: 600;
                     &:hover{
                         color: #fff;
@@ -47,10 +50,12 @@ header{
                 }
             }
         }
-        .iconBox{
+        .icon-box{
             display: flex;
-            gap: 26px;
+            gap: 40px;
+            font-size: 1.2rem;
             color: #fff;
+            cursor: pointer;
         }
         @media screen and (max-width:768px) {
         }
