--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -11,12 +11,12 @@ header{
         align-items: center;
         height: 100%;
         width: 100%;
-        max-width: 1600px;
+        max-width: 1024px;
         margin: 0 auto;
         .logo-box{
             display: flex;
             align-items: center;
-            padding: 20px 20px;
+            padding-left: 15px;
             img{
                 width: 48px;
             }
@@ -24,11 +24,10 @@ header{
         .nav-left-list{
             display: flex;
             gap: 50px;
-            margin-right: 680px;
             li{
                 a{
                     color: #777;
-                    font-size: 16px;
+                    font-size: 0.9vw;
                     font-weight: 600;
                     &:hover{
                         color: #fff;
@@ -42,7 +41,7 @@ header{
             li{
                 a{
                     color: #777;
-                    font-size: 15px;
+                    font-size: 0.8vw;
                     font-weight: 600;
                     &:hover{
                         color: #fff;
@@ -56,8 +55,15 @@ header{
             font-size: 1.2rem;
             color: #fff;
             cursor: pointer;
+            padding-right: 15px;
         }
         @media screen and (max-width:768px) {
+            .nav-left-list{
+                display: none;
+            }
+            .nav-right-list{
+                display: none;
+            }
         }
     }
 }
