--- a/components/main/main.css
+++ b/components/main/main.css
@@ -2,4 +2,14 @@ main {
   height: 100vh;
   scroll-snap-type: y mandatory;
   overflow: auto;
+  position: relative;
+  top: 68px;
+  background-color: #f5f5f5;
+}
+main::-webkit-scrollbar {
+  display: none;
+}
+
+.scroll {
+  overflow: hidden;
 }/*# sourceMappingURL=main.css.map */
