--- a/components/main/main.scss
+++ b/components/main/main.scss
@@ -2,4 +2,13 @@ main{
     height: 100vh;
     scroll-snap-type: y mandatory;
     overflow: auto;
+    position: relative;
+    top: 68px;
+    background-color: #f5f5f5;
+    &::-webkit-scrollbar{
+        display: none;
+    }
 }
+.scroll{
+    overflow: hidden;
+  }
