--- a/components/header/header.css
+++ b/components/header/header.css
@@ -18,7 +18,7 @@ header > .nav-wrap {
 header > .nav-wrap .logo-box {
   display: flex;
   align-items: center;
-  padding-left: 15px;
+  padding-left: 25px;
 }
 header > .nav-wrap .logo-box img {
   width: 48px;
@@ -29,7 +29,7 @@ header > .nav-wrap .nav-left-list {
 }
 header > .nav-wrap .nav-left-list li a {
   color: #777;
-  font-size: 0.9vw;
+  font-size: 18px;
   font-weight: 600;
 }
 header > .nav-wrap .nav-left-list li a:hover {
@@ -41,7 +41,7 @@ header > .nav-wrap .nav-right-list {
 }
 header > .nav-wrap .nav-right-list li a {
   color: #777;
-  font-size: 0.8vw;
+  font-size: 16px;
   font-weight: 600;
 }
 header > .nav-wrap .nav-right-list li a:hover {
@@ -53,7 +53,7 @@ header > .nav-wrap .icon-box {
   font-size: 1.2rem;
   color: #fff;
   cursor: pointer;
-  padding-right: 15px;
+  padding-right: 25px;
 }
 @media screen and (max-width: 768px) {
   header > .nav-wrap .nav-left-list {
