--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -16,7 +16,7 @@ header{
         .logo-box{
             display: flex;
             align-items: center;
-            padding-left: 15px;
+            padding-left: 25px;
             img{
                 width: 48px;
             }
@@ -27,7 +27,7 @@ header{
             li{
                 a{
                     color: #777;
-                    font-size: 0.9vw;
+                    font-size: 18px;
                     font-weight: 600;
                     &:hover{
                         color: #fff;
@@ -41,7 +41,7 @@ header{
             li{
                 a{
                     color: #777;
-                    font-size: 0.8vw;
+                    font-size: 16px;
                     font-weight: 600;
                     &:hover{
                         color: #fff;
@@ -55,7 +55,7 @@ header{
             font-size: 1.2rem;
             color: #fff;
             cursor: pointer;
-            padding-right: 15px;
+            padding-right: 25px;
         }
         @media screen and (max-width:768px) {
             .nav-left-list{
