--- a/components/header/header.css
+++ b/components/header/header.css
@@ -3,7 +3,7 @@ header {
   height: 68px;
   position: fixed;
   z-index: 10;
-  background-color: #111;
+  background-color: var(--color-black);
   font-family: "SUITE-Regular";
 }
 header > .nav-wrap {
@@ -28,30 +28,30 @@ header > .nav-wrap .nav-left-list {
   gap: 50px;
 }
 header > .nav-wrap .nav-left-list li a {
-  color: #777;
-  font-size: 18px;
+  color: var(--color-gray);
+  font-size: var(--font-large);
   font-weight: 600;
 }
 header > .nav-wrap .nav-left-list li a:hover {
-  color: #fff;
+  color: var(--color-white);
 }
 header > .nav-wrap .nav-right-list {
   display: flex;
   gap: 26px;
 }
 header > .nav-wrap .nav-right-list li a {
-  color: #777;
-  font-size: 16px;
+  color: var(--color-gray);
+  font-size: var(--font-medium);
   font-weight: 600;
 }
 header > .nav-wrap .nav-right-list li a:hover {
-  color: #fff;
+  color: var(--color-white);
 }
 header > .nav-wrap .icon-box {
   display: flex;
   gap: 40px;
-  font-size: 1.2rem;
-  color: #fff;
+  font-size: var(--icon-size);
+  color: var(--color-white);
   cursor: pointer;
   padding-right: 25px;
 }
