--- a/components/defining-section/defining-section.scss
+++ b/components/defining-section/defining-section.scss
@@ -21,26 +21,26 @@
                 font-size: 3.5vw;
                 font-weight: 500;
                 letter-spacing: 5px;
-                color: #fff;
+                color: var(--color-white);
             }
             p{
                 font-size: 2.2vw;
-                color: #fff;
+                color: var(--color-white);
             }
         }
         .text-wrap__button{
             margin-top: 50px;
             button{
                 font-family: 'SUITE-Regular';
-                border: 2px solid #fff;
+                border: 2px solid var(--color-white);
                 border-radius: 4px;
                 background-color: transparent;
-                color: #fff;
+                color: var(--color-white);
                 font-size: 20px;
                 padding: 16px 60px;
                 &:hover{
-                    background-color: #fff;
-                    color: #111;
+                    background-color: var(--color-white);
+                    color: var(--color-black);
                     cursor: pointer;
                 }
             }
