--- a/components/video-section/video-section.css
+++ b/components/video-section/video-section.css
@@ -27,32 +27,44 @@
   gap: 10px;
   margin: 0 auto;
   position: absolute;
-  bottom: 20%;
+  bottom: 5%;
   left: 12%;
 }
 .video-section .title-wrap .title-box .title-box__text p {
-  color: #fff;
+  color: var(--color-white);
   font-size: 0.9vw;
+  animation-name: fade-in, float;
+  animation-timing-function: linear;
+  animation-duration: 0.6s;
+  animation-fill-mode: forwards;
 }
 .video-section .title-wrap .title-box .title-box__text h2 {
   font-family: "SUITE-Regular";
-  color: #fff;
+  color: var(--color-white);
   font-size: 2.5vw;
+  animation-name: fade-in, float;
+  animation-timing-function: linear;
+  animation-duration: 0.8s;
+  animation-fill-mode: forwards;
 }
 .video-section .title-wrap .title-box .title-box__button {
   margin-top: 50px;
+  animation-name: fade-in, float;
+  animation-timing-function: linear;
+  animation-duration: 0.3s;
+  animation-fill-mode: forwards;
 }
 .video-section .title-wrap .title-box .title-box__button button {
   font-family: "SUITE-Regular";
-  border: 2px solid #fff;
+  border: 2px solid var(--color-white);
   border-radius: 4px;
   background-color: transparent;
-  color: #fff;
+  color: var(--color-white);
   font-size: 20px;
   padding: 16px 60px;
 }
 .video-section .title-wrap .title-box .title-box__button button:hover {
-  background-color: #fff;
-  color: #111;
+  background-color: var(--color-white);
+  color: var(--color-black);
   cursor: pointer;
 }/*# sourceMappingURL=video-section.css.map */
