--- a/components/vision-section/vision-section.css
+++ b/components/vision-section/vision-section.css
@@ -1,7 +1,7 @@
 .vision-section {
   scroll-snap-align: start;
   width: 100%;
-  height: 190%;
+  height: 200%;
   display: flex;
   justify-content: center;
   position: relative;
@@ -11,38 +11,50 @@
   width: 70%;
   height: 100%;
   position: absolute;
-  top: 8%;
+  top: 12%;
   display: flex;
   flex-direction: column;
   gap: 5%;
 }
 .vision-section .text-wrap .text-box .text-box__text p {
-  color: #111;
+  color: var(--color-black);
   font-size: 0.9vw;
+  animation-name: fade-in, float;
+  animation-timing-function: linear;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
 }
 .vision-section .text-wrap .text-box .text-box__text h2 {
-  color: #111;
+  color: var(--color-black);
   font-size: 2.5vw;
   font-weight: 700;
   letter-spacing: -2.5px;
+  animation-name: fade-in, float;
+  animation-timing-function: linear;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
 }
 .vision-section .text-wrap .text-box .text-box__button {
   display: flex;
   margin: 70px 0;
+  animation-name: fade-in, float;
+  animation-timing-function: linear;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
 }
 .vision-section .text-wrap .text-box .text-box__button button {
   font-family: "SUITE-Regular";
-  border: 2px solid #111;
+  border: 2px solid var(--color-black);
   border-radius: 4px;
   background-color: transparent;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-  color: #111111;
+  color: var(--color-black);
   font-size: 18px;
   padding: 16px 60px;
 }
 .vision-section .text-wrap .text-box .text-box__button button:hover {
-  background-color: #111;
-  color: #fff;
+  background-color: var(--color-black);
+  color: var(--color-white);
   cursor: pointer;
 }
 .vision-section .text-wrap .text-box .text-box__image {
@@ -58,12 +70,12 @@
   flex-direction: column;
 }
 .vision-section .text-wrap .video-box .video-box__text h2 {
-  color: #111;
+  color: var(--color-black);
   font-size: 2.5vw;
   font-weight: 700;
 }
 .vision-section .text-wrap .video-box .video-box__text p {
-  color: #111;
+  color: var(--color-black);
   font-size: 0.9vw;
   margin-top: 14px;
 }
@@ -81,7 +93,7 @@
 
 .sub-title {
   font-family: "SUITE-Regular";
-  color: #111;
+  color: var(--color-black);
   font-size: 18px;
   font-weight: 600;
   margin-bottom: 10px;
