feat: mobile 호환

--- a/components/defining-section/defining-section.css
+++ b/components/defining-section/defining-section.css
@@ -5,7 +5,8 @@
   height: 100%;
   display: flex;
   justify-content: center;
-  padding-top: 200px;
+  flex-direction: column;
+  justify-content: center;
   background-image: linear-gradient(rgba(0, 0, 0, 0.99), rgba(0, 0, 0, 0)), url(../../images/defining-image.jpg);
   background-size: cover;
   background-position: center;
@@ -41,4 +42,18 @@
   background-color: var(--color-white);
   color: var(--color-black);
   cursor: pointer;
+}
+@media screen and (max-width: 768px) {
+  .defining-section .text-wrap {
+    padding-top: 0;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .defining-section .text-wrap .text-wrap__text h2 {
+    font-size: 7vw;
+    letter-spacing: 1px;
+  }
+  .defining-section .text-wrap .text-wrap__text p {
+    font-size: 4.5vw;
+  }
 }/*# sourceMappingURL=defining-section.css.map */
