--- a/components/vision-section/vision-section.css
+++ b/components/vision-section/vision-section.css
@@ -16,31 +16,19 @@
   flex-direction: column;
   gap: 5%;
 }
-.vision-section .text-wrap .text-box .text-box__text p {
+.vision-section .text-wrap .text-box .text-box__text .sub-text {
   color: var(--color-black);
   font-size: 0.9vw;
-  animation-name: fade-in, float;
-  animation-timing-function: linear;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
 }
 .vision-section .text-wrap .text-box .text-box__text h2 {
   color: var(--color-black);
   font-size: 2.5vw;
   font-weight: 700;
   letter-spacing: -2.5px;
-  animation-name: fade-in, float;
-  animation-timing-function: linear;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
 }
 .vision-section .text-wrap .text-box .text-box__button {
   display: flex;
   margin: 70px 0;
-  animation-name: fade-in, float;
-  animation-timing-function: linear;
-  animation-duration: 0.5s;
-  animation-fill-mode: forwards;
 }
 .vision-section .text-wrap .text-box .text-box__button button {
   font-family: "SUITE-Regular";
@@ -90,8 +78,49 @@
   width: 100%;
   height: 420px;
 }
+@media screen and (max-width: 768px) {
+  .vision-section {
+    height: 170%;
+  }
+  .vision-section .text-wrap {
+    width: 100%;
+    height: 100%;
+    top: 10%;
+  }
+  .vision-section .text-wrap .text-box .text-box__text .sub-text {
+    padding: 0 30px;
+    font-size: 3vw;
+  }
+  .vision-section .text-wrap .text-box .text-box__text h2 {
+    padding: 0 30px;
+    font-size: 5.4vw;
+  }
+  .vision-section .text-wrap .text-box .text-box__text .text-box__button {
+    padding: 0 30px;
+  }
+  .vision-section .text-wrap .video-box {
+    flex-direction: column;
+    gap: 10%;
+    align-items: flex-start;
+  }
+  .vision-section .text-wrap .video-box .video-box__text h2 {
+    padding: 0 30px;
+    font-size: 5.4vw;
+  }
+  .vision-section .text-wrap .video-box .video-box__text p {
+    padding: 0 30px;
+    font-size: 3vw;
+  }
+  .vision-section .text-wrap .video-box .video-box__iframe {
+    width: 100%;
+  }
+  .vision-section .text-wrap .video-box .video-box__iframe iframe {
+    width: 100%;
+  }
+}
 
 .sub-title {
+  padding: 0 30px;
   font-family: "SUITE-Regular";
   color: var(--color-black);
   font-size: 18px;
