--- a/common/keyframes.css
+++ b/common/keyframes.css
@@ -8,10 +8,10 @@
     50%{transform: translate(0px, -40px);}
     100%{transform: translate(0px, -70px);}
 }
-@keyframes rotate{
-    0%{transform: rotate(0);}
-    50%{transform: rotate(10deg);}
-    100%{transform: rotate(0deg);}
+@keyframes fadeInDown{
+    0%{transform: translate(0px, 0px);}
+    50%{transform: translate(0px, 20px);}
+    100%{transform: translate(0px, 40px);}
 }
 @keyframes zoomIn{
     0%{transform: scale(1, 1);}
