--- a/components/defining-section/defining-section.scss
+++ b/components/defining-section/defining-section.scss
@@ -5,7 +5,8 @@
     height: 100%;
     display: flex;
     justify-content: center;
-    padding-top: 200px;
+    flex-direction: column;
+    justify-content: center;
     background-image: linear-gradient(
         rgba(0, 0, 0, 0.99),
         rgba(0, 0, 0, 0)
@@ -42,6 +43,22 @@
                     background-color: var(--color-white);
                     color: var(--color-black);
                     cursor: pointer;
+                }
+            }
+        }
+    }
+    @media screen and (max-width:768px){
+        .text-wrap{
+            padding-top: 0;
+            flex-direction: column;
+            justify-content: center;
+            .text-wrap__text{
+                h2{
+                    font-size: 7vw;
+                    letter-spacing: 1px;
+                }
+                p{
+                    font-size: 4.5vw;
                 }
             }
         }
