--- a/components/footer/footer.scss
+++ b/components/footer/footer.scss
@@ -49,8 +49,73 @@ footer{
                 display: flex;
                 gap: 24px;
                 font-size: var( --icon-size);
+                cursor: pointer;
             }
         }
-        
+    }
+    @media screen and (max-width:768px){
+        height: 210px;
+        .nav-wrap{
+            padding: 40px 20px;
+            .logo-box{
+                display: none;
+            }
+            .nav-box{
+                    display: flex;
+                    flex-direction: row;
+                    width: 100%;
+                    .list-box{
+                        display: flex;
+                        flex-direction: column;
+                        width: 100%;
+                        gap: 50px;
+                        .nav-left-list{
+                            width: 100%;
+                            height: 70%;
+                            font-size: 3vw;
+                            font-weight: 700;
+                            gap: 10px;
+                            flex-direction: row;
+                            li{
+                                &:last-child{
+                                    display: none;
+                                }
+                                &::after{
+                                    content: "·";
+                                    padding-left: 5px;
+                                    cursor: pointer;
+                                }
+                                &:nth-child(3)::after{
+                                    content: "";
+                                }
+                            }
+                        }
+                        .nav-right-list{
+                            width: 100%;
+                            height: 30%;
+                            color: var(--color-white);
+                            font-size: 2.7vw;
+                            flex-direction: row;
+                            li{
+                                &:nth-child(3){
+                                    display: none;
+                                }
+                                &:last-child{
+                                    display: none;
+                                }
+                                &::after{
+                                    content: ">";
+                                    padding-left: 5px;
+                                    cursor: pointer;
+                                }
+                            }
+                        }
+                    }
+                .icon-box{
+                    width: 24%;
+                    flex-direction: row;
+                }
+            }
+        }
     }
 }
