--- a/components/video-section/video-section.scss
+++ b/components/video-section/video-section.scss
@@ -44,7 +44,6 @@
                     animation-duration: 0.8s;
                     animation-fill-mode: forwards;
                 }
-                }
                 .title-box__button{
                     margin-top: 50px;
                     animation-name: fade-in, float;
@@ -69,3 +68,41 @@
             }
         }
     }
+    @media screen and (max-width:768px){
+        .title-wrap{
+            .title-box{
+                .title-box__text{
+                    top: 0%;
+                    display: flex;
+                    justify-content: flex-end;
+                    p{
+                        font-size: 3vw;
+                        animation-name: fade-in, fadeInDown;
+                        animation-timing-function: linear;
+                        animation-duration: 0.6s;
+                        animation-fill-mode: forwards;
+                        position: relative;
+                        bottom: 50%;
+                    }
+                    h2{
+                        font-family: 'SUITE-Regular';
+                        font-size: 6vw;
+                        animation-name: fade-in, fadeInDown;
+                        animation-timing-function: linear;
+                        animation-duration: 0.8s;
+                        animation-fill-mode: forwards;
+                        position: relative;
+                        bottom: 65%;
+                    }
+                    .title-box__button{
+                        display: flex;
+                        animation-name: fade-in, float;
+                        animation-timing-function: linear;
+                        animation-duration: 0.3s;
+                        animation-fill-mode: forwards;
+                    }
+                }
+            }
+        }
+    }
+}
